# SAFIR

./: .gitignore  LICENSE  README.md  index.html  netlify.toml  pyproject.toml  requirements.txt  setup.py
data/: sample_sensor_data.csv
src/safir/: __init__.py  __main__.py  api.py  cli.py  dashboard.py  data_ingestion.py  groundwater_forecast.py  rl_scheduler.py  server.py  simulator.py  soil_moisture_lstm.py  solar_irrigation_controller.py
src/safir_irrigation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
static/: demo.html
