[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safir-irrigation"
version = "0.1.0"
description = "SAFIR: AI-driven irrigation monitoring for climate resilience in Laos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [ { name = "SAFIR Project" } ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pandas",
  "numpy",
  "scikit-learn",
  "tensorflow",
  "pydantic",
  "matplotlib",
]

[project.scripts]
safir = "safir.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["safir"]
